--- a/react-click/public/index.html
+++ b/react-click/public/index.html
@@ -20,7 +20,7 @@
     -->
     <!-- <title>React App</title> -->
 
-    <title> Animal Click  Game</title>
+    <title> Band Click  Game</title>
     <link rel="icon" sizes="32x32" href="/react-click/publiC/images/dogs.jpg">
 
     <link href="https://fonts.googleapis.com/css?family=Holtwood+One+SC" rel="stylesheet">
